grammar
digit0      :   0-9

digit       :   1-9

letter      :   a-z | A-Z

otherChar   :   -ascii-

char        :   letter | otherChar

num         :   ('+' | '-')? (int | float)

int         :   '0' | digit+ digit0*

float       :   int? optFrac optExp

optFrac     :   ('.' int)?

optExp      :   ('^' ('+' | '-')? int)?

str         :   quotedStr ('+' quotedStr)*

quotedStr   :   '"' (char)* '"' (',' obj)*

bool        :   'True' | 'False'

null        :   'NULL'

base        :   num | str | bool | null

var         :   letter (digit | letter)*

list        :   '[' (listExpr)? ']'

listElem    :   var '[' int ']'

obj         :   var | base | list | listElem

listExpr    :   obj (',' obj)*  # limit to obj. In Python (e.g.) can be a whole expression

#-------- ================ --------#

program     :   (line ENDLINE)*

ENDLINE     :   ';' '\n'

line        :   assign
            |   input
            |   output
            |   ifLine
            |   loopLine
            |   keywordLine

input       :   'readIn' var

output      :   'writeOut' obj

keywordLine :   'break' | 'continue'

assign      :   var '=' expr

expr        :   baseExpr
            |   '(' expr ')' (operator expr)?

baseExpr    :   obj (operator obj)?

operator    :   '+' | '-' | '*' | '/' | '/.' | '%' | condOp

condOp      :   '&&' | '||' | '!=' | '==' | '<=' | '>='

ifLine      :   'if' ifCond ifBody

ifCond      :   '(' baseExpr condOp baseExpr ')'

ifBody      :   program (optElse)?

optElse     :   'else' program

loopLine    :   'while' ifCond loopBody

loopBody    :   program

#-------- ================ --------#

keyword     :   'readIn'
            |   'writeOut'
            |   'if'
            |   'while'
            |   'break'
            |   'continue'


#######################################################
#######################################################
#######################################################

# Sum of the prime numbers <= N

readIn N;
i = 1;
totSum = 0;
while (i <= N)
    j = 2;
    isPrime = True;
    maxCount = i / 2;
    while (j <= maxCount && isPrime)
        if (i % j == 0)
            writeOut "@ is not prime", i;
            isPrime = False;
        ;
        j = j + 1;
    ;
    if (isPrime)
        totSum = totSum + i;
    ;
    i = i + 1;
;
writeOut "Total primes sum until @ is @", N, totSum;

# Python equivalent

N = int(input())
total = 0
for i in range(2, N + 1):
    isPrime = True
    for j in range(2, int(i/2) + 1):
        if i % j == 0:
          print(f'{i} is not prime')
          isPrime = False
        if not isPrime:
            break
    if isPrime:
        total += i
print(f'Total primes sum until {N} is {total}')

#######################################################
#######################################################
#######################################################

# Find the N-th number in Fibonacci series

readIn N;
current = 2;
fib = [1, 1];
while (current < N)
    new = fib[0] + fib[1]
    fib = [fib[1], new]
    current = current + 1;
;
writeOut "The @th number in Fibonacci series is @", N, fib[1];

# python equivalent

N = int(input())
fib = [1, 1]
current = 2;
while current < N:
    new = fib[0] + fib[1]
    fib[0] = fib[1]
    fib[1] = new
    current += 1;
print(f'The {N}th in Fibonacci series is {fib[1]}')
