parser.c
#include <stdlib.h>
#include <string.h>
#include <stdio.h>
#include <sys/stat.h>

#include "parser.h"


struct ParseTree* alloc_ParseTree() {
    struct ParseTree* tree;
    tree = malloc(sizeof(struct ParseTree));
    if (tree == NULL)
        return NULL;
    tree->data = NULL;
    tree->child = NULL;
    tree->sibling = NULL;
    return tree;
}


struct ParseTree* new_ParseTree(struct Token* c) {
    struct ParseTree* tree;
    tree = alloc_ParseTree();
    if (tree == NULL)
        return NULL;
    tree->data = new_Token(c->lexeme, c->type);
    if (tree->data == NULL) {
        free(tree);
        return NULL;
    }
    tree->child = NULL;
    tree->sibling = NULL;
    return tree;
}


void print_PT(struct ParseTree* tree, int indent) {
    if (tree == NULL)
        return;
    // This is a Depth-First print
    if (indent > 0) {
        char space[indent + 1];
        memset(space, ' ', indent * sizeof(char));
        memset(space+indent, '\0', sizeof(char));
        printf("%s", space);
    }
    print_Token(tree->data);
    struct ParseTree* sibling;
    struct ParseTree* child;
    sibling = tree->sibling;
    child = tree->child;
    print_PT(child, indent + 2);
    print_PT(sibling, indent);
}


void print_ParseTree(struct ParseTree* tree) {
    print_PT(tree, 0);
}


void free_ParseTree(struct ParseTree* tree) {
    struct ParseTree* sibling;
    struct ParseTree* child;
    sibling = tree->sibling;
    child = tree->child;
    free_Token(tree->data);
    free(tree);
    if (sibling != NULL)
        free_ParseTree(sibling);
    if (child != NULL)
        free_ParseTree(child);
}


/*
 * Each function `is_<TokenType>` is defined as

 * int is_<TokenType> (struct TokenList** tok, struct ParseTree** new)

 * - **tok points to the current token in the sequence. The function moves it ahead CHANGING the pointer location.
 * - **new points to a ALREADY-ALLOCATED ParseTree. It will contain the resulting subtree, or stays empty.

 * Therefore:
 * - The caller must alloc the ParseTree** new
 * - The called must assign *new->data, child and sibling
 * - The caller is responsible for freeing memory

 * Return a integer flag with the operation final status (see #define below).
*/



/*
 * Template function for easy-to-check Tokens
 *
 * Match the current Token in the TokenList** tok, with the given TokenType type.
 * If char* lexeme != NULL, then also checks that the current Token's lexeme matches it.
 *
 * First, all WS are skipped. Then, if the check fails *tok unchanged. Otherwise it's advanced.
 *
 * It ASSUMES WS are already removed
*/
int _single_Token_template(struct TokenList** tok, struct ParseTree** new, enum TokenType type, char* lexeme) {
    if (*tok == NULL)
        return PARSING_ERROR;
    struct TokenList* current = *tok;
    if (current->token->type != type) {
        printf("Expecting <%s>, Found <%s>\n", type2char(type), type2char(current->token->type));
        return PARSING_ERROR;
    }
    if (lexeme != NULL)
        if(strcmp(current->token->lexeme, lexeme) != 0) {
            printf("Expecting %s, Found %s\n", lexeme, current->token->lexeme);
            return PARSING_ERROR;
        }
    // As by definition above, new is already allocated
    struct Token* newTok = new_Token(current->token->lexeme, current->token->type);
    if (newTok == NULL)
        return MEMORY_ERROR;
    (*new)->data = newTok;
    (*new)->child = NULL;
    (*new)->sibling = NULL;
    *tok = current->next;
    return SUBTREE_OK;
}


int is_Endline (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Endline, NULL);
}


int is_Int (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Int, NULL);
}


int is_Dot (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Dot, NULL);
}


int is_Var (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Var, NULL);
}


int is_readIn (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, ReadIn, "readIn");
}


int is_writeOut (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, WriteOut, "writeOut");
}


int is_If (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, If, "if");
}


int is_Else (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Else, "else");
}


int is_While (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, While, "while");
}


int is_Break (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Break, "break");
}


int is_Continue (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Continue, "Continue");
}


int is_Lbrack (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Lbrack, NULL);
}


int is_Rbrack (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Rbrack, NULL);
}


int is_Lpar (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Lpar, NULL);
}


int is_Rpar (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Rpar, NULL);
}


int is_Comma (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Comma, NULL);
}


int is_EqEq (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, EqEq, NULL);
}


int is_Equal (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Equal, NULL);
}


int is_Plus (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Plus, NULL);
}


int is_Minus (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Minus, NULL);
}


int is_NotEq (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, NotEq, NULL);
}


int is_Greater (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Greater, NULL);
}


int is_GreaterEq (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, GreaterEq, NULL);
}


int is_Lesser (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Lesser, NULL);
}


int is_LesserEq (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, LesserEq, NULL);
}


int is_Star (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Star, NULL);
}


int is_Div (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Div, NULL);
}


int is_FloatDiv (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, FloatDiv, NULL);
}


int is_Percent (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Percent, NULL);
}


int is_Or (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Or, NULL);
}


int is_And (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, And, NULL);
}


int is_Pow (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Pow, NULL);
}


int is_Null (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Null, NULL);
}


int is_Bool (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, Bool, NULL);
}


int is_CharSeq (struct TokenList** tok, struct ParseTree** new) {
    return _single_Token_template(tok, new, QuotedStr, NULL);
}


int is_QuotedStr (struct TokenList** tok, struct ParseTree** new) {
    struct ParseTree *charseq, *comma, *obj, *last;
    int status;
    struct Token *newTok;

    status = SUBTREE_OK;

    newTok = new_Token((char[1]){'\0'}, QuotedStr);
    if (newTok == NULL)
        return MEMORY_ERROR;
    (*new)->data = newTok;

    charseq = alloc_ParseTree();
    if (charseq == NULL)
        return MEMORY_ERROR;
    status = is_CharSeq(tok, &charseq);
    if (status != SUBTREE_OK) {
        free_ParseTree(charseq);
        return status;
    }
    (*new)->child = charseq;
    last = charseq;

    while ( (*tok)->token->type == Comma) {
        comma = alloc_ParseTree();
        if (comma == NULL)
            return MEMORY_ERROR;
        status = is_Comma(tok, &comma);
        if (status != SUBTREE_OK) {
            free_ParseTree(comma);
            break;
        }
        last->sibling = comma;
        last = comma;
        // Now there must be a Obj
        obj = alloc_ParseTree();
        if (obj == NULL)
            return MEMORY_ERROR;
        status = is_Obj(tok, &obj);
        if (status != SUBTREE_OK) {
            free_ParseTree(obj);
            break;
        }
        last->sibling = obj;
        last = obj;
    }

    return status;
}


int is_CondOp (struct TokenList** tok, struct ParseTree** new) {
    enum TokenType type;

    type = (*tok)->token->type;
    if (type == And)
        return is_And(tok, new);
    else if (type == Or)
        return is_Or(tok, new);
    else if (type == EqEq)
        return is_EqEq(tok, new);
    else if (type == NotEq)
        return is_NotEq(tok, new);
    else if (type == Greater)
        return is_Greater(tok, new);
    else if (type == GreaterEq)
        return is_GreaterEq(tok, new);
    else if (type == Lesser)
        return is_Lesser(tok, new);
    else if (type == LesserEq)
        return is_LesserEq(tok, new);
    else
        return PARSING_ERROR;
}


int is_Operator (struct TokenList** tok, struct ParseTree** new) {
    enum TokenType type;

    type = (*tok)->token->type;
    if (type == Plus)
        return is_Plus(tok, new);
    else if (type == Minus)
        return is_Minus(tok, new);
    else if (type == Star)
        return is_Star(tok, new);
    else if (type == Div)
        return is_Div(tok, new);
    else if (type == FloatDiv)
        return is_FloatDiv(tok, new);
    else if (type == Percent)
        return is_Percent(tok, new);
    else
        return is_CondOp(tok, new);
}


int match_operator_type (enum TokenType type) {
    return (type == Plus ||
            type == Minus ||
            type == Star ||
            type == Div ||
            type == FloatDiv ||
            type == Percent ||
            type == EqEq ||
            type == NotEq ||
            type == Greater ||
            type == GreaterEq ||
            type == Lesser ||
            type == LesserEq);
}


int is_Expr (struct TokenList** tok, struct ParseTree** new) {
    enum TokenType type;
    struct ParseTree *lpar, *expr1, *rpar, *expr2; // for nested Expr
    struct ParseTree *obj1; // for BaseExpr
    struct ParseTree *op; // the optional Operator
    struct Token* newTok;
    int status;

    status = SUBTREE_OK;
    newTok = new_Token((char[1]){'\0'}, Expr);
    if (newTok == NULL)
        return MEMORY_ERROR;
    (*new)->data = newTok;

    type = (*tok)->token->type;
    if (type != Lpar) {
        // must be base expression
        obj1 = alloc_ParseTree();
        if (obj1 == NULL)
            return MEMORY_ERROR;
        status = is_Obj(tok, &obj1);
        if (status != SUBTREE_OK) {
            free_ParseTree(obj1);
            return status;
        }
        (*new)->child = obj1;

        // The remainder of the Expr is optional
        if (match_operator_type((*tok)->token->type)) {
            op = alloc_ParseTree();
            if (op == NULL)
                return MEMORY_ERROR;
            status = is_Operator(tok, &op);
            if (status != SUBTREE_OK) {
                free_ParseTree(op);
                return status;
            }
            obj1->sibling = op;

            // Now there must be another Expr
            expr2 = alloc_ParseTree();
            if (expr2 == NULL)
                return MEMORY_ERROR;
            status = is_Expr(tok, &expr2);
            if (status != SUBTREE_OK) {
                free_ParseTree(expr2);
                return status;
            }
            op->sibling = expr2;
        }
    }
    else {
        // Must be a nested expression
        lpar = alloc_ParseTree();
        if (lpar == NULL)
            return MEMORY_ERROR;
        status = is_Lpar(tok, &lpar);
        if (status != SUBTREE_OK) {
            free_ParseTree(lpar);
            return status;
        }
        (*new)->child = lpar;

        expr1 = alloc_ParseTree();
        if (expr1 == NULL)
            return MEMORY_ERROR;
        status = is_Expr(tok, &expr1);
        if (status != SUBTREE_OK) {
            free_ParseTree(expr1);
            return status;
        }
        lpar->sibling = expr1;

        rpar = alloc_ParseTree();
        if (rpar == NULL)
            return MEMORY_ERROR;
        status = is_Rpar(tok, &rpar);
        if (status != SUBTREE_OK) {
            free(rpar);
            return status;
        }
        expr1->sibling = rpar;

        // Here too, next operator is optional
        if (match_operator_type((*tok)->token->type)) {
            op = alloc_ParseTree();
            if (op == NULL)
                return MEMORY_ERROR;
            status = is_Operator(tok, &op);
            if (status != SUBTREE_OK) {
                free_ParseTree(op);
                return status;
            }
            rpar->sibling = op;

            // Now there must be another Expr
            expr2 = alloc_ParseTree();
            if (expr2 == NULL)
                return MEMORY_ERROR;
            status = is_Expr(tok, &expr2);
            if (status != SUBTREE_OK) {
                free_ParseTree(expr2);
                return status;
            }
            op->sibling = expr2;
        }
    }
    return status;
}


int is_List (struct TokenList** tok, struct ParseTree** new) {
    struct ParseTree *open, *listexpr, *close;
    int status, has_expr;
    struct Token* newTok;

    newTok = new_Token((char[1]){'\0'}, List);
    if (newTok == NULL)
        return MEMORY_ERROR;
    (*new)->data = newTok;

    status = SUBTREE_OK;
    has_expr = 0;
    open = alloc_ParseTree();
    if (open == NULL)
        return MEMORY_ERROR;

    status = is_Lbrack(tok, &open);
    if (status != SUBTREE_OK) {
        free_ParseTree(open);
        return status;
    }
    (*new)->child = open;

    if ((*tok)->token->type != Rbrack) {
        listexpr = alloc_ParseTree();
        if (listexpr == NULL)
            return MEMORY_ERROR;
        status = is_ListExpr(tok, &listexpr);
        if (status != SUBTREE_OK) {
            free_ParseTree(listexpr);
            return status;
        }
        has_expr = 1;
        open->sibling = listexpr;
    }

    close = alloc_ParseTree();
    if (close == NULL)
        return MEMORY_ERROR;
    status = is_Rbrack(tok, &close);
    if (status != SUBTREE_OK) {
        free_ParseTree(close);
        return status;
    }

    if (has_expr)
        listexpr->sibling = close;
    else
        open->sibling = close;
    return status;
}


int is_ListExpr(struct TokenList** tok, struct ParseTree** new) {
    struct ParseTree *obj, *comma, *last;
    int status;
    struct Token* newTok;

    status = SUBTREE_OK;
    newTok = new_Token((char[1]){'\0'}, ListExpr);
    if (newTok == NULL) {
        free_ParseTree(obj);
        return MEMORY_ERROR;
    }
    (*new)->data = newTok;

    obj = alloc_ParseTree();
    if (obj == NULL)
        return MEMORY_ERROR;

    status = is_Obj(tok, &obj);
    if (status != SUBTREE_OK) {
        free_ParseTree(obj);
        return status;
    }
    (*new)->child = obj;
    last = obj;

    while( (*tok)->token->type == Comma) {
        comma = alloc_ParseTree();
        if (comma == NULL)
            return MEMORY_ERROR;
        status = is_Comma(tok, &comma);
        if (status != SUBTREE_OK) {
            free_ParseTree(comma);
            return status;
        }
        last->sibling = comma;
        last = comma;
        obj = alloc_ParseTree();
        if (obj == NULL)
            return MEMORY_ERROR;
        status = is_Obj(tok, &obj);
        if (status != SUBTREE_OK) {
            free_ParseTree(obj);
            return status;
        }
        last->sibling = obj;
        last = obj;
    }
    return status;

}


int is_Str (struct TokenList** tok, struct ParseTree** new) {
    struct ParseTree *quotedstr, *plus, *last;
    int status;
    struct Token* newTok;

    newTok = new_Token((char[1]){'\0'}, Str);
    if (newTok == NULL) {
        free_ParseTree(quotedstr);
        return MEMORY_ERROR;
    }
    (*new)->data = newTok;

    status = SUBTREE_OK;
    quotedstr = alloc_ParseTree();
    if (quotedstr == NULL)
        return MEMORY_ERROR;

    status = is_QuotedStr(tok, &quotedstr);
    if (status != SUBTREE_OK) {
        free_ParseTree(quotedstr);
        return status;
    }
    (*new)->child = quotedstr;
    last = quotedstr;

    while( (*tok)->token->type == Plus) {
        plus = alloc_ParseTree();
        if (plus == NULL)
            return MEMORY_ERROR;
        status = is_Plus(tok, &plus);
        if (status != SUBTREE_OK) {
            free_ParseTree(plus);
            return status;
        }
        last->sibling = plus;
        last = plus;
        if ((*tok)->token->type != QuotedStr)
            return PARSING_ERROR;
        quotedstr = alloc_ParseTree();
        if (quotedstr == NULL)
            return MEMORY_ERROR;
        status = is_QuotedStr(tok, &quotedstr);
        if (status != SUBTREE_OK) {
            free_ParseTree(quotedstr);
            return status;
        }
        last->sibling = quotedstr;
        last = quotedstr;
    }
    return status;
}


int is_Frac (struct TokenList** tok, struct ParseTree** new) {
    struct ParseTree *dot, *integer;
    int status;
    struct Token* newTok;

    newTok = new_Token((char[1]){'\0'}, Frac);
    if (newTok == NULL)
        return MEMORY_ERROR;
    (*new)->data = newTok;

    status = SUBTREE_OK;
    dot = alloc_ParseTree();
    if (dot == NULL)
        return MEMORY_ERROR;

    status = is_Dot(tok, &dot);
    if (status != SUBTREE_OK) {
        free_ParseTree(dot);
        return status;
    }
    (*new)->child = dot;

    integer = alloc_ParseTree();
    if (integer == NULL)
        return MEMORY_ERROR;

    status = is_Int(tok, &integer);
    if (status != SUBTREE_OK) {
        free_ParseTree(integer);
        return status;
    }
    dot->sibling = integer;
    return status;
}


int is_Exp (struct TokenList** tok, struct ParseTree** new) {
    int status, has_sign;
    struct ParseTree *pow, *sign, *integer;
    struct Token* newTok;

    newTok = new_Token((char[1]){'\0'}, Pow);
    if (newTok == NULL)
        return MEMORY_ERROR;
    (*new)->data = newTok;

    status = SUBTREE_OK;
    has_sign = 0;
    pow = alloc_ParseTree();

    if (pow == NULL)
        return MEMORY_ERROR;

    status = is_Pow(tok, &pow);
    if (status != SUBTREE_OK) {
        free_ParseTree(pow);
        return status;
    }
    (*new)->child = pow;

    sign = alloc_ParseTree();
    if (sign == NULL)
        return MEMORY_ERROR;

    if ((*tok)->token->type == Plus) {
        status = is_Plus(tok, &sign);
        has_sign = 1;
    }
    else if ((*tok)->token->type == Minus) {
        status = is_Minus(tok, &sign);
        has_sign = 1;
    }

    if (has_sign && (status != SUBTREE_OK)) {
        free_ParseTree(sign);
        return status;
    }
    if (has_sign)
        (*new)->child->sibling = sign;

    integer = alloc_ParseTree();
    if (integer == NULL)
        return MEMORY_ERROR;

    status = is_Int(tok, &integer);
    if (status != SUBTREE_OK) {
        free_ParseTree(integer);
        return status;
    }

    if (has_sign)
        sign->sibling = integer;
    else
        (*new)->child->sibling = integer;
    return status;
}


int is_Float(struct TokenList** tok, struct ParseTree** new) {
    struct ParseTree *integer, *frac, *pow, *last;
    int status;
    struct Token* newTok;

    newTok = new_Token((char[1]){'\0'}, Float);
    if (newTok == NULL)
        return MEMORY_ERROR;
    (*new)->data = newTok;

    status = SUBTREE_OK;

    if ((*tok)->token->type == Dot) {
        frac = alloc_ParseTree();
        if (frac == NULL)
            return MEMORY_ERROR;
        status = is_Frac(tok, &frac);
        if (status != SUBTREE_OK) {
            free_ParseTree(frac);
            return status;
        }
        (*new)->child = frac;
        last = frac;
        if ((*tok)->token->type == Pow) {
            pow = alloc_ParseTree();
            if (pow == NULL)
                return MEMORY_ERROR;
            status = is_Exp(tok, &pow);
            if (status != SUBTREE_OK) {
                free_ParseTree(pow);
                return status;
            }
            last->sibling = pow;
            last = pow;
        }
    }
    else if ((*tok)->token->type == Int) {
        integer = alloc_ParseTree();
        if (integer == NULL)
            return MEMORY_ERROR;
        status = is_Int(tok, &integer);
        if (status != SUBTREE_OK) {
            free_ParseTree(integer);
            return status;
        }
        (*new)->child = integer;
        last = integer;
        if ((*tok)->token->type == Dot) {
            frac = alloc_ParseTree();
            if (frac == NULL)
                return MEMORY_ERROR;
            status = is_Frac(tok, &frac);
            if (status != SUBTREE_OK) {
                free_ParseTree(frac);
                return status;
            }
            last->sibling = frac;
            last = frac;
        }
        if ((*tok)->token->type == Pow) {
            pow = alloc_ParseTree();
            if (pow == NULL)
                return MEMORY_ERROR;
            status = is_Exp(tok, &pow);
            if (status != SUBTREE_OK) {
                free_ParseTree(pow);
                return status;
            }
            last->sibling = pow;
            last = pow;
        }
    }
    else
        status = PARSING_ERROR;

    return status;
}


int is_Num(struct TokenList** tok, struct ParseTree** new) {
    struct ParseTree *sign, *numeric;
    int status, has_sign;
    struct Token* newTok;

    newTok = new_Token((char[1]){'\0'}, Num);
    if (newTok == NULL)
        return MEMORY_ERROR;
    (*new)->data = newTok;

    status = SUBTREE_OK;
    has_sign = 1;
    sign = alloc_ParseTree();

    if (sign == NULL)
        return MEMORY_ERROR;

    if ((*tok)->token->type == Plus)
        status = is_Plus(tok, &sign);
    else if ((*tok)->token->type == Minus)
        status = is_Minus(tok, &sign);
    else
        has_sign = 0;

    if (status != SUBTREE_OK) {
        free_ParseTree(sign);
        return status;
    }
    if (has_sign)
        (*new)->child = sign;
    else
        free_ParseTree(sign);

    numeric = alloc_ParseTree();
    if (numeric == NULL)
        return MEMORY_ERROR;

    status = is_Float(tok, &numeric);

    if (status != SUBTREE_OK)
        free_ParseTree(numeric);
    else {
        if (has_sign)
            sign->sibling = numeric;
        else
            (*new)->child = numeric;
    }
    return status;
}


int is_Obj(struct TokenList** tok, struct ParseTree** new) {
    struct Token* newTok;
    struct ParseTree* subtree;
    int status;

    newTok = new_Token((char[1]){'\0'}, Obj);
    if (newTok == NULL)
        return MEMORY_ERROR;
    (*new)->data = newTok;

    subtree = alloc_ParseTree();
    if (subtree == NULL)
        return MEMORY_ERROR;

    // use LL(1) FOLLOW Sets
    struct TokenList* curr;
    curr = *tok;
    if (curr->token->type == Var)
        status = is_Var(tok, &subtree);
    else if (curr->token->type == Null)
        status = is_Null(tok, &subtree);
    else if (curr->token->type == Lbrack)
        status = is_List(tok, &subtree);
    else if (curr->token->type == QuotedStr)
        status = is_Str(tok, &subtree);
    else if (curr->token->type == Bool)
        status = is_Bool(tok, &subtree);
    else if (curr->token->type == Int ||
             curr->token->type == Dot ||
             curr->token->type == Plus ||
             curr->token->type == Minus)
        status = is_Num(tok, &subtree);
    else
        status = PARSING_ERROR;

    if (status == SUBTREE_OK)
        (*new)->child = subtree;
    else
        free_ParseTree(subtree);
    return status;
}



int is_Assign(struct TokenList** tok, struct ParseTree** new) {
    struct ParseTree *var1, *eq, *var2;
    int status;
    struct Token *newTok;

    newTok = new_Token((char[1]) {'\0'}, Assign);
    if (newTok == NULL)
        return MEMORY_ERROR;
    (*new)->data = newTok;

    var1 = alloc_ParseTree();
    if (var1 == NULL)
        return MEMORY_ERROR;
    status = is_Var(tok, &var1);
    if (status != SUBTREE_OK) {
        free_ParseTree(var1);
        return PARSING_ERROR;
    }
    (*new)->child = var1;

    eq = alloc_ParseTree();
    if (eq == NULL)
        return MEMORY_ERROR;
    status = is_Equal(tok, &eq);
    if (status != SUBTREE_OK) {
        free_ParseTree(eq);
        return PARSING_ERROR;
    }
    var1->sibling = eq;

    var2 = alloc_ParseTree();
    if (var2 == NULL)
        return MEMORY_ERROR;

    status = is_Expr(tok, &var2);
    if (status != SUBTREE_OK) {
        free_ParseTree(var2);
        return PARSING_ERROR;
    }
    eq->sibling = var2;
    return SUBTREE_OK;
}


int is_Input(struct TokenList** tok, struct ParseTree** new) {
    // Create subtree
    struct ParseTree *readin, *var;
    int status;
    struct Token* newTok;

    newTok = new_Token((char[1]){'\0'}, Input);
    if (newTok == NULL)
        return MEMORY_ERROR;
    (*new)->data = newTok;

    readin = alloc_ParseTree();
    if (readin == NULL)
        return MEMORY_ERROR;
    status = is_readIn(tok, &readin);
    if (status != SUBTREE_OK) {
        free_ParseTree(readin);
        return status;
    }
    (*new)->child = readin;

    var = alloc_ParseTree();
    if (var == NULL)
        return MEMORY_ERROR;
    status = is_Var(tok, &var);
    if (status != SUBTREE_OK) {
        free_ParseTree(var);
        return status;
    }
    readin->sibling = var;

    return SUBTREE_OK;
}


int is_Output(struct TokenList** tok, struct ParseTree** new) {
    // Create subtree
    struct ParseTree *writeOut, *obj;
    int status;
    struct Token* newTok;

    newTok = new_Token((char[1]){'\0'}, Output);
    if (newTok == NULL)
        return MEMORY_ERROR;
    (*new)->data = newTok;

    writeOut = alloc_ParseTree();
    if (writeOut == NULL)
        return MEMORY_ERROR;
    status = is_writeOut(tok, &writeOut);
    if (status != SUBTREE_OK) {
        free_ParseTree(writeOut);
        return status;
    }
    (*new)->child = writeOut;

    obj = alloc_ParseTree();
    if (obj == NULL)
        return MEMORY_ERROR;
    status = is_Obj(tok, &obj);
    if (status != SUBTREE_OK) {
        free_ParseTree(obj);
        return status;
    }
    writeOut->sibling = obj;

    return status;
}


int is_OptElse (struct TokenList** tok, struct ParseTree** new) {
    struct ParseTree *elsetok, *line, *endline, *last;
    int status;
    struct Token* newTok;

    status = SUBTREE_OK;

    newTok = new_Token((char[1]){'\0'}, OptElse);
    if (newTok == NULL)
        return MEMORY_ERROR;
    (*new)->data = newTok;

    elsetok = alloc_ParseTree();
    if (elsetok == NULL)
        return MEMORY_ERROR;
    status = is_Else(tok, &elsetok);
    (*new)->child = elsetok;
    last = elsetok;
    if (status != SUBTREE_OK)
        return status;
    do{
        // else cannot be empty
        line = alloc_ParseTree();
        if (line == NULL)
            return MEMORY_ERROR;
        status = is_Line(tok, &line);
        last->sibling = line;
        last = line;
        if (status != SUBTREE_OK)
            return status;
        endline = alloc_ParseTree();
        if (endline == NULL)
            return MEMORY_ERROR;
        status = is_Endline(tok, &endline);
        last->sibling = endline;
        last = endline;
        if (status != SUBTREE_OK)
            return status;
    }
    while ( (*tok) != NULL && (*tok)->token->type != Endline);
    return status;
}


int is_IfBody (struct TokenList** tok, struct ParseTree** new) {
    struct ParseTree *line, *endline, *optelse, *last;
    int status, count;
    struct Token* newTok;

    status = SUBTREE_OK;
    count = 0;

    newTok = new_Token((char[1]){'\0'}, IfBody);
    if (newTok == NULL)
        return MEMORY_ERROR;
    (*new)->data = newTok;
    last = NULL;

    while ( (*tok) != NULL &&
            (*tok)->token->type != Endline &&
            (*tok)->token->type != Else) {
        count++;
        line = alloc_ParseTree();
        if (line == NULL)
            return MEMORY_ERROR;
        status = is_Line(tok, &line);
        if (last == NULL)
            (*new)->child = line;
        else
            last->sibling = line;
        last = line;
        if (status != SUBTREE_OK)
            return status;

        endline = alloc_ParseTree();
        if (endline == NULL)
            return MEMORY_ERROR;
        status = is_Endline(tok, &endline);
        last->sibling = endline;
        last = endline;
        if (status != SUBTREE_OK)
            return status;
    }

    if (count == 0) {
        printf("IfBody cannot be empty\n");
        return PARSING_ERROR;
    }

    if ((*tok) != NULL &&
        (*tok)->token->type == Else) {
        // must be the Else branch
        optelse = alloc_ParseTree();
        if (optelse == NULL)
            return MEMORY_ERROR;
        status = is_OptElse(tok, &optelse);
        if (last == NULL)
            (*new)->child = optelse;
        else
            last->sibling = optelse;
    }
    return status;
}

int is_IfCond (struct TokenList** tok, struct ParseTree** new) {
    struct ParseTree *lpar, *obj1, *op, *obj2, *rpar;
    int status;
    struct Token* newTok;

    status = SUBTREE_OK;

    newTok = new_Token((char[1]){'\0'}, IfCond);
    if (newTok == NULL)
        return MEMORY_ERROR;
    (*new)->data = newTok;

    lpar = alloc_ParseTree();
    if (lpar == NULL)
        return MEMORY_ERROR;
    status = is_Lpar(tok, &lpar);
    (*new)->child = lpar;
    if (status != SUBTREE_OK)
        return status;

    obj1 = alloc_ParseTree();
    if (obj1 == NULL)
        return MEMORY_ERROR;
    status = is_Obj(tok, &obj1);
    lpar->sibling = obj1;
    if (status != SUBTREE_OK)
        return status;

    op = alloc_ParseTree();
    if (op == NULL)
        return MEMORY_ERROR;
    status = is_CondOp(tok, &op);
    obj1->sibling = op;
    if (status != SUBTREE_OK)
        return status;

    obj2 = alloc_ParseTree();
    if (obj2 == NULL)
        return MEMORY_ERROR;
    status = is_Obj(tok, &obj2);
    op->sibling = obj2;
    if (status != SUBTREE_OK)
        return status;

    rpar = alloc_ParseTree();
    if (rpar == NULL)
        return MEMORY_ERROR;
    status = is_Rpar(tok, &rpar);
    obj2->sibling = rpar;
    if (status != SUBTREE_OK)
        return status;

    return status;
}

